--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ What Is Wireframing?<br>
 Wireframing Tools.<br>
 Course Module Overview<br>
 Project: Think about a website. Make a skeleton by using wireframing tools.</p>
+				<button type="button" onclick="alert('Coming Soon')">Know More</button>
 			</div>
 			<a href=""><img src="img/web.jpg"></a>
 		</div>
@@ -106,6 +107,7 @@ Variable in JS<br>
 Operator, Data Type in JS<br>
 Commenting in JS<br>
 Project: Playing with Javascript syntax.</p>
+				<button type="button" onclick="alert('Coming Soon')">Know More</button>
 			</div>
 			<a href=""><img src="img/mockup jpge.jpg"></a>
 		</div>
@@ -130,6 +132,7 @@ Understand the fundamentals of using 2D and 3D graphics<br>
 Become acquainted with advanced topics such as shaders, physics, AI, and Network based games.<br>
 Understand the process of game development from idea to beta version<br>
 Apply theories and develop and test an actual game</p>
+				<button type="button" onclick="alert('Coming Soon')">Know More</button>
 			</div>
 			<a href=""><img src="img/web2.jpg"></a>
 		</div>
